--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -1,32 +1,32 @@
 /* Google Fonts Import Link */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 body {
-    position: relative;
+  position: relative;
 }
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 260px;
-    background: #ffffff;
-    z-index: 100;
-    transition: all 0.5s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 260px;
+  background: #ffffff;
+  z-index: 100;
+  transition: all 0.5s ease;
 }
 .sidebar.close {
-    width: 78px;
+  width: 78px;
 }
 .sidebar .logo-details {
-    height: 60px;
-    width: 100%;
-    display: flex;
-    align-items: center;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 /* .sidebar .logo-details i {
   font-size: 30px;
@@ -38,246 +38,349 @@ body {
   box-shadow: 0 4px 2px -2px gray;
 } */
 .sidebar .logo-details .logo_name {
-    font-size: 30px;
-    color: rgb(113, 216, 166);
-    font-weight: 600;
-    transition: 0.3s ease;
-    transition-delay: 0.1s;
-    padding-left: 10px;
+  font-size: 30px;
+  color: rgb(113, 216, 166);
+  font-weight: 600;
+  transition: 0.3s ease;
+  transition-delay: 0.1s;
+  padding-left: 10px;
 }
 .sidebar.close .logo-details .logo_name {
-    transition-delay: 0s;
-    opacity: 0;
-    pointer-events: none;
+  transition-delay: 0s;
+  opacity: 0;
+  pointer-events: none;
 }
 .sidebar .nav-links {
-    height: 100%;
-    padding: 30px 0 150px 0;
-    overflow: auto;
-    background-color: rgb(8, 37, 11);
+  height: 100%;
+  padding: 30px 0 150px 0;
+  overflow: auto;
+  background-color: rgb(8, 37, 11);
 }
 .sidebar.close .nav-links {
-    overflow: visible;
+  overflow: visible;
 }
 .sidebar .nav-links::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 .sidebar .nav-links li {
-    position: relative;
-    list-style: none;
-    transition: all 0.4s ease;
+  position: relative;
+  list-style: none;
+  transition: all 0.4s ease;
 }
 .sidebar .nav-links li:hover {
-    background: rgb(95, 179, 138);
+  background: rgb(95, 179, 138);
 }
 .sidebar .nav-links li .iocn-link {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .sidebar.close .nav-links li .iocn-link {
-    display: block;
+  display: block;
 }
 .sidebar .nav-links li i {
-    height: 50px;
-    min-width: 78px;
-    text-align: center;
-    line-height: 50px;
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  height: 50px;
+  min-width: 78px;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 .sidebar .nav-links li.showMenu i.arrow {
-    transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 .sidebar.close .nav-links i.arrow {
-    display: none;
+  display: none;
 }
 .sidebar .nav-links li a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 .sidebar .nav-links li a .link_name {
-    font-size: 12px;
-    font-weight: 400;
-    color: #fff;
-    transition: all 0.4s ease;
+  font-size: 12px;
+  font-weight: 400;
+  color: #fff;
+  transition: all 0.4s ease;
 }
 .sidebar.close .nav-links li a .link_name {
-    opacity: 0;
-    pointer-events: none;
+  opacity: 0;
+  pointer-events: none;
 }
 .sidebar .nav-links li .sub-menu {
-    padding: 6px 6px 14px 80px;
-    margin-top: -10px;
-    background: rgb(4, 18, 5);
-    display: none;
+  padding: 6px 6px 14px 80px;
+  margin-top: -10px;
+  background: rgb(4, 18, 5);
+  display: none;
 }
 .sidebar .nav-links li.showMenu .sub-menu {
-    display: block;
+  display: block;
 }
 .sidebar .nav-links li .sub-menu a {
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    padding: 5px 0;
-    white-space: nowrap;
-    /* opacity: 0.8; */
-    transition: all 0.3s ease;
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  padding: 5px 0;
+  white-space: nowrap;
+  /* opacity: 0.8; */
+  transition: all 0.3s ease;
 }
 .sidebar .nav-links li .sub-menu a:hover {
-    opacity: 1;
-    transition: 0.1s;
+  opacity: 1;
+  transition: 0.1s;
 }
 .sidebar.close .nav-links li .sub-menu {
-    position: absolute;
-    left: 100%;
-    top: -10px;
-    margin-top: 0;
-    padding: 10px 20px;
-    border-radius: 0 6px 6px 0;
-    opacity: 0;
-    display: block;
-    pointer-events: none;
-    transition: 0.15s;
+  position: absolute;
+  left: 100%;
+  top: -10px;
+  margin-top: 0;
+  padding: 10px 20px;
+  border-radius: 0 6px 6px 0;
+  opacity: 0;
+  display: block;
+  pointer-events: none;
+  transition: 0.15s;
 }
 .sidebar.close .nav-links li:hover .sub-menu {
-    top: 0;
-    opacity: 1;
-    pointer-events: auto;
-    transition: all 0.4s ease;
+  top: 0;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
 }
 .sidebar .nav-links li .sub-menu .link_name {
-    display: none;
+  display: none;
 }
 .sidebar.close .nav-links li .sub-menu .link_name {
-    font-size: 18px;
-    opacity: 1;
-    display: block;
+  font-size: 18px;
+  opacity: 1;
+  display: block;
 }
 .sidebar .nav-links li .sub-menu.blank {
-    opacity: 1;
-    pointer-events: auto;
-    padding: 3px 20px 6px 16px;
-    opacity: 0;
-    pointer-events: none;
+  opacity: 1;
+  pointer-events: auto;
+  padding: 3px 20px 6px 16px;
+  opacity: 0;
+  pointer-events: none;
 }
 .sidebar .nav-links li:hover .sub-menu.blank {
-    top: 50%;
-    transform: translateY(-50%);
+  top: 50%;
+  transform: translateY(-50%);
 }
 .sidebar .profile-details {
-    position: fixed;
-    bottom: 0;
-    width: 260px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #0a3110;
-    padding: 12px 0;
-    transition: all 0.5s ease;
-    padding-left: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 260px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #0a3110;
+  padding: 12px 0;
+  transition: all 0.5s ease;
+  padding-left: 10px;
 }
 .sidebar.close .profile-details {
-    background: none;
+  background: none;
 }
 .sidebar.close .profile-details {
-    width: 78px;
+  width: 78px;
 }
 .sidebar .profile-details .profile-content {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .sidebar .profile-details img {
-    height: 52px;
-    width: 52px;
-    object-fit: cover;
-    border-radius: 16px;
-    margin: 0 14px 0 12px;
-    background: #493fd7;
-    transition: all 0.5s ease;
+  height: 52px;
+  width: 52px;
+  object-fit: cover;
+  border-radius: 16px;
+  margin: 0 14px 0 12px;
+  background: #493fd7;
+  transition: all 0.5s ease;
 }
 .sidebar.close .profile-details img {
-    padding: 10px;
+  padding: 10px;
 }
 .sidebar .profile-details .profile_name,
 .sidebar .profile-details .job {
-    color: #ffffff;
-    font-size: 10px;
-    font-weight: 500;
-    white-space: nowrap;
+  color: #ffffff;
+  font-size: 10px;
+  font-weight: 500;
+  white-space: nowrap;
 }
 .sidebar.close .profile-details i,
 .sidebar.close .profile-details .profile_name,
 .sidebar.close .profile-details .job {
-    display: none;
+  display: none;
 }
 .sidebar .profile-details .job {
-    font-size: 12px;
+  font-size: 12px;
 }
 .home-section {
-    position: relative;
-    background: #e4e9f7;
-    height: 100vh;
-    left: 260px;
-    width: calc(100% - 260px);
-    transition: all 0.5s ease;
+  position: relative;
+  background: #e4e9f7;
+  height: 100vh;
+  left: 260px;
+  width: calc(100% - 260px);
+  transition: all 0.5s ease;
 }
 .sidebar.close ~ .home-section {
-    left: 78px;
-    width: calc(100% - 78px);
+  left: 78px;
+  width: calc(100% - 78px);
 }
 .home-section .home-content {
-    position: fixed;
-    width: calc(100% - 78px);
-    z-index: 20;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: white;
-    justify-content: space-between;
+  position: fixed;
+  width: calc(100% - 78px);
+  z-index: 20;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  justify-content: space-between;
 }
 .home-section .home-content .bx-menu,
 .home-section .home-content .text {
-    color: #101d12;
-    font-size: 35px;
+  color: #101d12;
+  font-size: 35px;
 }
 .home-section .home-content .bx-menu {
-    margin: 0 15px;
-    cursor: pointer;
+  margin: 0 15px;
+  cursor: pointer;
 }
 .home-section .home-content .text {
-    font-size: 26px;
-    font-weight: 600;
+  font-size: 26px;
+  font-weight: 600;
 }
 @media (max-width: 400px) {
-    .sidebar.close .nav-links li .sub-menu {
-        display: none;
-    }
-    .sidebar {
-        width: 78px;
-    }
-    .sidebar.close {
-        width: 0;
-    }
-    .home-section {
-        left: 78px;
-        width: calc(100% - 78px);
-        z-index: 100;
-    }
-    .sidebar.close ~ .home-section {
-        width: 100%;
-        left: 0;
-    }
+  .sidebar.close .nav-links li .sub-menu {
+    display: none;
+  }
+  .sidebar {
+    width: 78px;
+  }
+  .sidebar.close {
+    width: 0;
+  }
+  .home-section {
+    left: 78px;
+    width: calc(100% - 78px);
+    z-index: 100;
+  }
+  .sidebar.close ~ .home-section {
+    width: 100%;
+    left: 0;
+  }
 }
 
 .unj {
-    width: 40px;
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    margin-right: 10px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 10px;
+}
+
+.logout:hover {
+  background-color: #941919;
+}
+
+.rektorat-img {
+  width: 100%;
+  filter: brightness(25%);
+  height: 100%;
+  object-fit: cover;
+  display: inline-block;
+  padding: 0px;
+  margin: 0px;
+  overflow: hidden;
+}
+
+.content {
+  height: 100%;
+  overflow: hidden;
+}
+
+.content-box {
+  position: absolute;
+  z-index: 1;
+  background-color: white;  
+  top: 60px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border-radius: 10px;
+  justify-content: space-between;
+}
+
+.content-header {
+  top: 0;
+  height: 80px;
+  z-index: 100;
+  display: block;
+  position: relative;
+  margin-top: 0px;
+  background-color: rgb(113, 216, 166);
+  color: white;
+  width: 100%;
+  box-shadow: 0 2px 2px 2px rgba(120, 118, 118, 0.3);
+}
+
+.content-header h1 {
+  font-size: 1.5em;
+  padding: 20px 20px;
+  color: rgb(255, 255, 255);
+}
+
+.not-finished {
+  color: #ff3422;
+  padding: 5px 10px;
+  border: 1px solid #ff5722;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 10px;
+  width: 90%;
+  text-align: center;
+}
+
+.finished {
+  color: #4caf50;
+  padding: 5px 10px;
+  border: 1px solid #4caf50;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 10px;
+  width: 90%;
+  text-align: center;
+}
+
+.not-finished {
+  position: relative;
+  display: inline-block;
+}
+
+.not-finished .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 20;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  font-size: 15px;
+
+  /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+  opacity: 0;
+  transition: opacity 0.7s;
+}
+
+.not-finished:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 .logout {
@@ -298,37 +401,4 @@ body {
     z-index: 100;
     border-radius: 8px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.logout:hover {
-    background-color: #941919;
-}
-
-.rektorat-img {
-    width: 100%;
-    filter: brightness(25%);
-    height: 100%;
-    object-fit: cover;
-    display: inline-block;
-    padding: 0px;
-    margin: 0px;
-    overflow: hidden;
-}
-
-.content {
-    height: 100%;
-    overflow: hidden;
-}
-
-.content-box {
-    position: absolute;
-    z-index: 1;
-    background-color: white;
-    display: flex;
-    top: 120px;
-    bottom: 60px;
-    left: 90px;
-    right: 90px;
-    border-radius: 10px;
-    justify-content: space-between;
 }
