--- a/public/css/tabel.css
+++ b/public/css/tabel.css
@@ -1,73 +1,64 @@
 .content-kegiatan {
-  position: absolute;
-  z-index: 1;
-  background-color: rgba(245, 245, 245, 1);
-  align-items: center;
-  justify-content: center;
-  top: 60px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  flex-wrap: wrap;
-  gap: 3em;
-  overflow: scroll;
-  overflow-x: hidden;
-  padding-bottom: 20px;
-}
-
-.tabel {
-  padding: 50px;
-  overflow: scroll;
-  overflow-x: hidden;
-  width: 100%;
-}
-.sorting {
-  background-color: #59ae83;
-  color: white;
-}
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #59ae83;
-  color: white;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
-tbody {
-  overflow-y: auto;
-  max-height: 240px;
-}
-
-tr:hover {
-  background-color: #f5f5f5;
-}
-
-.search-bar {
-  margin-bottom: 10px;
-  padding: 2px 10px;
-}
-
-.content-box {
-  position: absolute;
-  z-index: 1;
-  background-color: white;
-  display: flex;
-  top: 60px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  border-radius: 10px;
-  justify-content: space-between;
-}
+    position: absolute;
+    z-index: 1;
+    background-color: rgba(245, 245, 245, 1);
+    align-items: center;
+    justify-content: center;
+    top: 60px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    flex-wrap: wrap;
+    gap: 3em;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding-bottom: 20px;
+  }
+  
+  .tabel {
+    padding: 25px 50px 50px 50px;
+    overflow: scroll;
+    overflow-x: hidden;
+    width: 100%;
+  }
+  .sorting {
+    background-color: #59ae83;
+    color: white;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  th,
+  td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  th {
+    background-color: #59ae83;
+    color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+  
+  tbody {
+    overflow-y: auto;
+    max-height: 240px;
+  }
+  
+  tr:hover {
+    background-color: #f5f5f5;
+  }
+  
+  .search-bar {
+    margin-bottom: 20px;
+    padding: 2px 10px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px;
+    border-radius: 9px;
+  }
+  
